@@ -46,8 +46,8 @@ namespace IceChat
             "Take my advice. I don't use it anyway",
             "If at first you don't succeed, skydiving is not for you",
             "He who laughs last, thinks slowest",
-            "When the chips are down, well, the buffalo is empty",
-            "A fine is a tax for doing wrong. A tax is a fine for doing well",
+            "When the chips are down, the buffalo is empty",
+            "A fine is a tax for doing wrong. A tax is a fine for doing well.",
             "Man who run behind car get exhausted",
             "For Sale: Parachute. Only used once, never opened, small stain.",
             "Light travels faster then sound, which is why some people appear bright, until you hear them speak",
@@ -57,7 +57,7 @@ namespace IceChat
             "Hard work pays off in the future, laziness pays off now",
             "For Sale: Intergalactic Proton Powered Electrical Tentacled Advertising Droids",
             "Given the choice between you, I'll take the sea-sick crocodile.",
-            "The wonderful thing about Tiggers, are that Tiggers are wonderful things."};
+            "I couldn't repair your brakes, so I made your horn louder."};
 
     }
 }
