@@ -1,5 +1,13 @@
+Build Beta 3.8 February 3 2011
+* Added No Color Mode option to popup menu for Channel from Server Tree
+* No Color Mode now properly strips all colors
+* Strip out NULL Characters sent by server
+
+
 Build Beta 3.71 February 2 2011
 * Fix $os identifier for Linux/Unix (now fixed)
+
+
 
 Build Beta 3.6 February 2 2011
 * Fix bug with rejoining channels
